--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ body {
 }
 
 .dark {
-  --color-background: #353C3F;
+  --color-background: #252525;
   --color-text: #EEEEEE;
   --color-text-reverse: #3F3C36;
   --color-border: #575C5D;
